Fix icon overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -220,6 +220,22 @@ footer {
 }
 
 
+
+/*
+ * Bootstrap 4.2+ features
+ */
+
+.text-decoration-none {
+  text-decoration: none !important;
+}
+
+.mx-n2 {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+}
+
+
+
 /*
  * Navbar
  */
